--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,7 +212,7 @@ main {
     flex-direction: column;
 }
 
-/* Form */ 
+/* Form */
 #signup {
     background-image: url('../images/signup-image.webp');
     background-size: cover;
@@ -227,7 +227,7 @@ main {
     padding: 30px;
 }
 
-#signup-form > h2 {
+#signup-form>h2 {
     color: #fafafa;
     margin-bottom: 30px;
 }
@@ -346,6 +346,27 @@ main {
         column-count: 3;
     }
 
+    /* Signup page */
+    #signup {
+        background-position: center;
+        position: relative;
+    }
+
+    #signup-form {
+        position: absolute;
+        max-width: 400px;
+        left: 10%;
+        top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
+    }
 }
 
 /* Large devices: laptops & desktops (992px & above) */
