--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,7 +233,8 @@ main {
 }
 
 .text-input {
-    background-color: #fafafa00;
+    background: transparent;
+    color: #fafafa;
     width: 100%;
     height: 25px;
     margin: 5px 0 20px;
